# nomboid-max

./: Cargo.toml  readme.md
src/: lerp_angle.rs  main.rs
src/components/: mod.rs  proximity_grid.rs  size.rs
src/plugins/: mod.rs
src/plugins/boids/: components.rs  config.rs  events.rs  mod.rs  systems.rs
src/systems/: exit_app.rs  mod.rs
src/systems/debug/: grid_neighbors.rs  mod.rs
src/util/: mod.rs
