[package]
name = "nomboid-max"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_egui = "0.36.0"
bevy_spatial = "0.11.0"
rand = "0.9.2"
# bevy_prng = { version = "0.11.3", features = ["rand_chacha", "wyrand"] }
# bevy_rand = "0.11.3"
# rand_core = "0.9.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
